# h1-asset-fetcher

./: .gitignore  LICENSE  README.md  apk_browser_downloader.py  apk_downloader.py  apk_web_downloader.py  decompile_all.sh  h1-asset-fetcher.py  install.sh  pyproject.toml  requirements.txt  revengi_downloader.py  telegram_login.py
.github/workflows/: publish.yml
docs/design/plans/: 2026-06-12-phase1-repackage.md
docs/design/specs/: 2026-06-12-tui-redesign-design.md
docs/superpowers/plans/: 2026-06-12-phase1-repackage.md
docs/superpowers/specs/: 2026-06-12-tui-redesign-design.md
h1_asset_fetcher/: __init__.py  __version__.py  cli.py
h1_asset_fetcher/core/: __init__.py  cache.py  collect.py  config.py  identifiers.py  output.py
h1_asset_fetcher/decompile/: __init__.py  fast.sh  jadx.sh
h1_asset_fetcher/download/: __init__.py  apkeep.py  browser.py  login.py  telegram_bot.py  web.py
h1_asset_fetcher/tui/: __init__.py  app.py
tests/: conftest.py  test_cache.py  test_characterization.py  test_cli_smoke.py  test_config.py  test_download.py  test_filter.py  test_hackerone.py  test_identifiers.py  test_immunefi.py  test_output.py  test_progress.py  test_registry.py  test_tui.py  test_wizard.py
tests/fixtures/: cache.json
