[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "h1-asset-fetcher"
version = "1.1.1"
description = "Fetch, download, and decompile mobile/exe assets from bug bounty programs"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "0xbartita" }]
dependencies = ["requests>=2.28.0", "questionary>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
h1-asset-fetcher = "h1_asset_fetcher.cli:main"

[project.urls]
Homepage = "https://github.com/0xbartita/h1-asset-fetcher"

[tool.setuptools.packages.find]
include = ["h1_asset_fetcher*"]

[tool.setuptools.package-data]
"h1_asset_fetcher.decompile" = ["*.sh"]
